...
                                mainAxisSize: MainAxisSize.min,
                                children: [
                                  _buildTabButton(
                                    context,
                                    model,
                                    0,
                                    'Users',
                                    model.currentTabIndex == 0,
                                  ),
                                  _buildTabButton(
                                    context,
                                    model,
                                    1,
                                    'Chats',
                                    model.currentTabIndex == 1,
                                  ),
                                ],
                              ),
                            ),
                          ),
...
